# Grapan

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Grapholon.sln  Grapholon.sln.licenseheader  LICENSE  README.md  ReadMe.txt  grapholon.cpp  grapholon.sln  grapholon.vcxproj  grapholon.vcxproj.filters  grapholon_cli.cpp  stdafx.cpp
Debug/: grapholon.ilk  grapholon_tests.exp  grapholon_tests.ilk  vc141.idb
Debug/grapholon.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  grapholon.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Include/: CMakeLists.txt  Curve.hpp  CurveDeformer.hpp  Graph.hpp  GrapholonTypes.hpp  PropertyList.hpp  SkeletalGraph.hpp  Vector.hpp  VoxelComplex.hpp  VoxelSkeleton.hpp  common.hpp
grapholon/: CurveDeformer.hpp  graph1.xml  grapholon.cpp  grapholon.vcxproj  grapholon.vcxproj.filters  test.graph
grapholon_tests/: VoxelSkeletonTests.cpp  grapholon_tests.vcxproj  grapholon_tests.vcxproj.filters  stdafx.cpp  stdafx.h  targetver.h
grapholon_tests/Debug/: vc141.idb
grapholon_tests/Debug/grapholon_tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  grapholon_tests.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
inc/: Grapholon.hpp
lib_test/: PropertyListTest.cpp  lib_test.vcxproj  lib_test.vcxproj.filters
src/: Grapholon.cpp
